FIXED Navbar logo alginment on mobile devices

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -391,7 +391,7 @@ footer {
 }
 
 /*---Media Query mobile--*/
-@media only screen and (max-width: 420px) {
+@media only screen and (max-width: 450px) {
     .navbar-brand {
         font-family: 'Lunasima', sans-serif;
         font-size: 22px;
@@ -400,7 +400,10 @@ footer {
         padding-top: 5%;
         padding-bottom: 5%;
     }
-
+    .navbar-brand img {
+        max-height: 60px;
+        margin-left: -5%
+    }
     .email-form {
         font-size: 0.75rem;
     }
